# CurrentRangerApp

./: .gitignore  LICENSE  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js  task.md  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
cr-mock/: Cargo.toml
cr-mock/src/: main.rs
docs/: Battery-Tools.md  Connecting.md  Console.md  Device-Config.md  Getting-Started.md  Home.md  Integration.md  Keyboard-Shortcuts.md  Live-Chart.md  Markers.md  Mock-Device.md  Workspaces.md  _config.yml  index.md
reference/CurrentRanger-master/: CurrentRanger_R3.ino  CurrentRanger_R3_1.1.7.UF2
reference/current-ranger-gui-main/: LICENSE  README.md  current_ranger_gui.py  requirements.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/examples/: serial_test.rs
src-tauri/icons/: icon.icns  make_icons.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/metrics/: mod.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/serial/: mod.rs
src-tauri/src/workspace/: mod.rs
src/api/: tauri.ts
src/components/: AppSettings.tsx  BatteryTools.tsx  DebugConsole.tsx  DeviceConfig.tsx  DevicePanel.tsx  IntegrationPanel.tsx  LiveChart.tsx  MarkersPanel.tsx  StatsPanel.tsx  StatusBar.tsx  WorkspacePanel.tsx
src/lib/: events.ts  gapCompression.test.ts  gapCompression.ts  logger.ts
src/store/: index.ts
src/types/: index.ts
